# webtemplate

./: .gitignore  Cargo.toml
src/: example.rs  factory.rs  main.rs  web.rs  web_backend.rs
