[package]
name = "simple_web"
version = "0.1.0"
authors = ["doenis <Dstu93@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hyper = "0.13.*"